--- a/homeworks/Lesson03.ipynb
+++ b/homeworks/Lesson03.ipynb
@@ -424,13 +424,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([9.44455331e-02, 1.10421206e-09, 1.00000000e+00, 2.32382225e-25,\n",
+       "       9.95062133e-01, 9.36611520e-09, 1.00000000e+00, 9.11625549e-04,\n",
+       "       9.11361901e-01, 1.00000000e+00])"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def calc_pred_proba(X=X, W=W):\n",
-    "#     W = eval_model(X, y, iterations, alpha)\n",
-    "    "
+    "def calc_pred_proba(X=X_st, W=W):\n",
+    "    y_pred_ = sigmoid(np.dot(W, X))\n",
+    "    return y_pred_\n",
+    "\n",
+    "calc_pred_proba()"
    ]
   },
   {
