--- a/homeworks/Lesson03.ipynb
+++ b/homeworks/Lesson03.ipynb
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -435,15 +435,15 @@
        "       9.11361901e-01, 1.00000000e+00])"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def calc_pred_proba(X=X_st, W=W):\n",
-    "    y_pred_ = sigmoid(np.dot(W, X))\n",
-    "    return y_pred_\n",
+    "    y_pred_proba = sigmoid(np.dot(W, X))\n",
+    "    return y_pred_proba\n",
     "\n",
     "calc_pred_proba()"
    ]
@@ -457,10 +457,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 0, 1, 0, 1, 0, 1, 0, 1, 1]"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def calc_pred(X=X_st, W=W, t=0.5):\n",
+    "    y_pred = [int(a > t) for a in (sigmoid(np.dot(W, X)))]\n",
+    "    return y_pred\n",
+    "\n",
+    "calc_pred()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -471,10 +488,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 0 0 5\n",
+      "[0, 0, 1, 0, 1, 0, 1, 0, 1, 1]\n",
+      "[0 0 1 0 1 0 1 0 1 1] \n",
+      "\n",
+      "Accuracy:  1.0\n",
+      "Confussion Matrix:  \n",
+      "|5|0|\n",
+      "|0|5|\n",
+      "Precision:  1.0\n",
+      "Recall:  1.0\n",
+      "F1:  1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred = calc_pred()\n",
+    "TP, FP, FN, TN = 0, 0, 0, 0\n",
+    "y = y.astype(int)\n",
+    "\n",
+    "for pred, true in zip(y_pred, y):\n",
+    "    if pred == 1:\n",
+    "        if true == 1:\n",
+    "            TP += 1\n",
+    "        else:\n",
+    "            FP += 1\n",
+    "    else:\n",
+    "        if true == 1:\n",
+    "            FN += 1\n",
+    "        else:\n",
+    "            TN += 1\n",
+    "            \n",
+    "print(TP, FP, FN, TN)\n",
+    "print(y_pred)\n",
+    "print(y, '\\n')\n",
+    "print('Accuracy: ', sum(y_pred == y)/len(y))\n",
+    "print('Confussion Matrix: ', f'\\n|{TP}|{FP}|\\n|{FN}|{TN}|')\n",
+    "print('Precision: ', TP/(TP+FP))\n",
+    "print('Recall: ', TP/(TP+FN))\n",
+    "print('F1: ', 2*(TP/(TP+FN) * TP/(TP+FP))/(TP/(TP+FN) + TP/(TP+FP)))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -489,7 +549,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Да, данные слишком простые"
+    "Да, данные слишком простые, а итераций много"
    ]
   },
   {
