--- a/homeworks/Lesson01.ipynb
+++ b/homeworks/Lesson01.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -44,7 +44,7 @@
        "       [ 1,  1,  2,  5,  3,  0,  5, 10,  1,  2]])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -106,6 +106,59 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/",
+     "height": 185
+    },
+    "colab_type": "code",
+    "id": "IDB22MQKMYaJ",
+    "outputId": "4c03219e-a57c-4583-f439-6699fd0619bb"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of objects = 10        \n",
+      "Learning rate = 0.01        \n",
+      "Initial weights = [1.  0.5] \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = X.shape[1]\n",
+    "alpha = 1e-2\n",
+    "W = np.array([1, 0.5])\n",
+    "print(f'Number of objects = {n} \\\n",
+    "       \\nLearning rate = {alpha} \\\n",
+    "       \\nInitial weights = {W} \\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "W.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 42,
    "metadata": {
     "colab": {
@@ -113,6 +166,7 @@
      "height": 185
     },
     "colab_type": "code",
+    "collapsed": true,
     "id": "IDB22MQKMYaJ",
     "outputId": "4c03219e-a57c-4583-f439-6699fd0619bb"
    },
@@ -179,13 +233,6 @@
     }
    ],
    "source": [
-    "n = X.shape[1]\n",
-    "alpha = 1e-2\n",
-    "W = np.array([1, 0.5])\n",
-    "print(f'Number of objects = {n} \\\n",
-    "       \\nLearning rate = {alpha} \\\n",
-    "       \\nInitial weights = {W} \\n')\n",
-    "\n",
     "for i in range(1500):\n",
     "    y_pred = np.dot(W, X)\n",
     "    err = calc_mse(y, y_pred)\n",
